# dlzip2

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  pyproject.toml
python/dlzip2/: __init__.py  compression_utils.py  main.py
python/test/: test_compression_utils.py
rust/: bwt.rs  content.rs  huffman.rs  lib.rs  mtf.rs  z_rle.rs
rust/bwt/: mod.rs  sais.rs
